Upgrade Unrefactored of gameplay

--- a/rps.html
+++ b/rps.html
@@ -7,10 +7,17 @@
     <title>Rock Paper Scissors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <script src="dommain.js"></script>
 </head>
 
 <body>
+    <button onclick="playRound('Rock')">Rock</button>
+    <button onclick="playRound('Paper')">Paper</button>
+    <button onclick="playRound('Scissors')">Scissors</button>
+    <div>
+        <p>Game Log</p>
+        <p id="gamelog"></p>
+    </div>
 </body>
 
 </html>
